# learn-vocab

./: .gitignore  Cargo.toml  README.md  browse.sh  pyproject.toml
import_document/: import.py
import_vocab/: import.py
src/: main.rs
tests/: test_import_document.py  test_learn_vocab.py
