[tool.poetry]
name = "learn_vocab"
version = "0.1.0"
description = ""
authors = ["rsookram <rashadsookram@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
konlpy = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
